Fancy landing page

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,7 +2,7 @@
   <ul class="title-area">
     <!-- Title Area -->
     <li class="name">
-      <h1><a href="#">jQuery.EpochChart.js </a></h1>
+      <h1><a href="#">EpochChart</a></h1>
     </li>
   </ul>
   <section class="top-bar-section">
