--- a/app/assets/stylesheets/charts.css.scss
+++ b/app/assets/stylesheets/charts.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the chart controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.calendar-help {
+  color: rgb(43, 166, 203);
+  border-bottom: 0;
+}
+
+.demo-frame {
+  width: 100%;
+  height: 200px;
+}
+
+.row.header {
+  margin-bottom: 30px;
+}
