--- a/app/views/charts/new.html.haml
+++ b/app/views/charts/new.html.haml
@@ -1,8 +1,8 @@
 .row
-  .small-6.columns
+  .small-12.large-6.columns
 
-    %h3 Make your own hosted embed:
-    = form_for @new_chart do |f|
+    %h3 Make a hosted embed:
+    = form_for @chart do |f|
 
       = f.label :title, "Name Your Chart:"
       = f.text_field :title, placeholder: "eg. Weekly Active Users"
@@ -22,14 +22,20 @@
           = f.label :owner_email, "Your Email"
           = f.text_field :owner_email
 
+      %p 
+        EpochChart requires data and markers in 
+        = link_to "specific formats.", "https://github.com/jfeldstein/jQuery.EpochChart.js"
+      %p 
+        The Markers URL can also be an 
+        = link_to "iCal export", "https://github.com/jfeldstein/jQuery.EpochChart.js"
+        which lets you manage markers by editing events in the calendar.
+
       = f.button "Create This Chart"
 
-  .small-6.columns
+  .small-12.large-6.columns
+    %h3 Or, download and customize:
+    
+    %p Besides these hosted embeds, EpochChart.js is available as a jQuery library for you to use in your own projects. It's built on top of Highcharts, giving it a wealth of customization options.
 
-    %p 
-      EpochChart requires data and markers in 
-      = link_to "specific formats.", "https://github.com/jfeldstein/jQuery.EpochChart.js"
-    %p 
-      The Markers URL can also be an 
-      = link_to "iCal export", "https://github.com/jfeldstein/jQuery.EpochChart.js"
-      which lets you manage markers by editing events in the calendar.
+    = link_to "Download the Code", "https://github.com/jfeldstein/jQuery.EpochChart.js", class: "button secondary"
+
