--- a/app/views/charts/new.html.haml
+++ b/app/views/charts/new.html.haml
@@ -24,10 +24,10 @@
 
       %p 
         EpochChart requires data and markers in 
-        = link_to "specific formats.", "https://github.com/jfeldstein/jQuery.EpochChart.js"
+        = link_to "specific formats.", howto_url(anchor: 'data-formats')
       %p 
         The Markers URL can also be an 
-        = link_to "iCal export", "https://github.com/jfeldstein/jQuery.EpochChart.js"
+        = link_to "iCal export", howto_url(anchor: 'events-from-ics')
         which lets you manage markers by editing events in the calendar.
 
       = f.button "Create This Chart"
