--- a/app/views/charts/embed.html.haml
+++ b/app/views/charts/embed.html.haml
@@ -1,2 +1,5 @@
+- content_for :title do 
+  = @chart.title
+
 #chart.chart{data: {data_url: "#{datum_url(@chart)}", events_url: "#{calendar_data_url(@chart)}", title: "#{@chart.title}"}}
 
