--- a/app/views/charts/show.html.haml
+++ b/app/views/charts/show.html.haml
@@ -1,3 +1,30 @@
-%h1= @chart.title
+.row
+  .small-12.centered.columns
+    %h1= @chart.title
 
-#main-chart.chart{data: {events_url: "#{@chart.calendar_url}", data_url: "#{@chart.data_url}", title: "#{@chart.title}"}}
+    .row 
+      .small-12.large-6.columns
+        %h3 Produce this chart:
+
+        %iframe#main-chart{style: 'border: 0', src: embed_url(@chart)}
+
+      .small-12.large-6.columns
+        %h3 With this code: 
+
+        %textarea{style: "width: 100%; height: 200px;"}
+          :preserve
+            &lt;iframe src="#{embed_url(@chart)}" style="border:0" &gt;&lt;/iframe&gt;
+
+.row#useful-footer
+  .small-12.centered.columns
+    %h3 Was this useful? 
+
+    %p 
+      = link_to "EpochChart.js", "https://github.com/jfeldstein/jQuery.EpochChart.js"
+      was developed by 
+      = link_to "Jordan Feldstein", "http://twitter.com/jfeldstein" 
+      as a way to compare data from one's app with what's happening in the real world. These hosted embeds, and the code on GitHub, are provided for free and as-is.
+    %p 
+      If you like this tool, or the types of problem solving it's good for follow him on twitter.
+      %iframe{allowtransparency:"true", frameborder:0, scrolling:"no", src:"//platform.twitter.com/widgets/follow_button.html?screen_name=jfeldstein&show_count=false", style:"width:140px; height:20px;"}
+
