--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,17 +5,32 @@
       <h1><a href="/">EpochChart</a></h1>
     </li>
   </ul>
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li class="divider"></li>
-      <li class=""><a href="http://jfeldstein.com/2013/10/how-and-why-i-made-epochcharts-js/">How It Was Made</a></li>
-      <li class="divider"></li>
-      <li class=""><a href="http://twitter.com/jfeldstein">Contact the Author</a></li>
-      <li class="divider"></li>
-      <li class="has-form">
-        <a href="https://github.com/jfeldstein/jQuery.EpochChart.js" class="button">Download @ GitHub</a>
-      </li>
-    </ul>
-  </section>
+  
+  <% if params[:action] == 'show' %>
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="divider"></li>
+        <li class=""><a href="/">About EpochChart</a></li>
+        <li class="divider"></li>
+        <li class="has-form">
+          <%= link_to "Make Another Chart", new_chart_url(), class: "button success" %>
+        </li>
+      </ul>
+    </section>
+  <% else %>
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="divider"></li>
+        <li class=""><a href="http://jfeldstein.com/2013/10/how-and-why-i-made-epochcharts-js/">How It Was Made</a></li>
+        <li class="divider"></li>
+        <li class=""><a href="http://twitter.com/jfeldstein">Contact the Author</a></li>
+        <li class="divider"></li>
+        <li class="has-form">
+          <a href="https://github.com/jfeldstein/jQuery.EpochChart.js" class="button">Download @ GitHub</a>
+        </li>
+      </ul>
+    </section>
+  <% end %>
 </nav>
