Twitter url helper

--- a/app/views/charts/show.html.haml
+++ b/app/views/charts/show.html.haml
@@ -22,7 +22,7 @@
     %p 
       = link_to "EpochChart.js", "https://github.com/jfeldstein/jQuery.EpochChart.js"
       was developed by 
-      = link_to "Jordan Feldstein", "http://twitter.com/jfeldstein" 
+      = link_to "Jordan Feldstein", twitter_url
       as a way to compare data from one's app with what's happening in the real world. These hosted embeds, and the code on GitHub, are provided for free and as-is.
     %p 
       If you like this tool, or the types of problem solving it's good for follow him on twitter.
