--- a/app/views/charts/new.html.haml
+++ b/app/views/charts/new.html.haml
@@ -30,9 +30,9 @@
         = link_to "iCal export", howto_url(anchor: 'events-from-ics')
         which lets you manage markers by editing events in the calendar.
 
-      = f.button "Create This Chart"
+      = f.button "Create this Chart"
 
-  .small-12.large-6.columns
+  .small-12.large-5.large-offset-1.columns
     %h3 Or, download and customize:
     
     %p Besides these hosted embeds, EpochChart.js is available as a jQuery library for you to use in your own projects. It's built on top of Highcharts, giving it a wealth of customization options.
