Changing nav to 'how epochchart.js was made' from how 'it' was made

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,7 +23,7 @@
       <!-- Right Nav Section -->
       <ul class="right">
         <li class="divider"></li>
-        <li class=""><a href="http://jfeldstein.com/2013/10/how-and-why-i-made-epochcharts-js/">How It Was Made</a></li>
+        <li class=""><a href="http://jfeldstein.com/2013/10/how-and-why-i-made-epochcharts-js/">How EpochChart.js Was Made</a></li>
         <li class="divider"></li>
         <li class=""><a href="http://twitter.com/jfeldstein">Contact the Author</a></li>
         <li class="divider"></li>
