no border on the home-page's demo chart

--- a/app/views/charts/landing.html.haml
+++ b/app/views/charts/landing.html.haml
@@ -7,7 +7,7 @@
 
     .row.header
       .small-5.columns 
-        %iframe.demo-frame{src: embed_url(@demo_chart)}
+        %iframe.demo-frame{style: "border: 0;", src: embed_url(@demo_chart)}
 
       .small-6.columns.small-offset-1
         %h2
