--- a/app/views/charts/landing.html.haml
+++ b/app/views/charts/landing.html.haml
@@ -6,10 +6,10 @@
       %small Data with context
 
     .row.header
-      .small-5.columns 
+      .small-12.large-5.columns 
         %iframe.demo-frame{style: "border: 1px solid rgb(17, 17, 17)", src: embed_url(@demo_chart)}
 
-      .small-6.columns.small-offset-1
+      .small-12.large-6.columns.large-offset-1
         %h2
           %small
             Annotate your data with real-world events. 
