Updating layouts to specify module name for main JS, instead of requirejs-rails's default. Trying to fix heroku.production bug

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EpochChart</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= requirejs_include_tag "application" %>
+  <%=
+    requirejs_include_tag("application") do |controller|
+      { 'main' => 'application' }
+    end
+  %>
   <%= javascript_include_tag "vendor/custom.modernizr" %>
   <%= csrf_meta_tags %>
 </head>
