Changing messaging on the home page

--- a/app/views/charts/landing.html.haml
+++ b/app/views/charts/landing.html.haml
@@ -14,7 +14,7 @@
           %small
             Annotate your data with real-world events. 
             %br 
-            See what created change and growth.
+            See what's moving the needle.
 
         = link_to "Build a Chart", new_chart_url, class: "button"
         = link_to "Get the Code", github_url, class: 'button secondary'
