Copywriting for show footer

--- a/app/views/charts/show.html.haml
+++ b/app/views/charts/show.html.haml
@@ -20,11 +20,15 @@
     %h3 Was this useful? 
 
     %p 
-      = link_to "EpochChart.js", "https://github.com/jfeldstein/jQuery.EpochChart.js"
-      was developed by 
+      These graphs are made with
+      = link_to "jQuery.EpochChart.js,", github_url
+      a jQuery plugin / HighCharts addon developed by 
       = link_to "Jordan Feldstein", twitter_url
-      as a way to compare data from one's app with what's happening in the real world. These hosted embeds, and the code on GitHub, are provided for free and as-is.
+      as a way to compare data from one's app with what's happening in the real world. 
     %p 
-      If you like this tool, or the types of problem solving it's good for follow him on twitter.
+      If you like this tool, or the types of problem solving it's good for, follow Jordan on twitter.
       %iframe{allowtransparency:"true", frameborder:0, scrolling:"no", src:"//platform.twitter.com/widgets/follow_button.html?screen_name=jfeldstein&show_count=false", style:"width:140px; height:20px;"}
+    %p
+      These hosted embeds, and the code on GitHub, are provided for free and as-is.
+      
 
