Changing new helper text

--- a/app/views/charts/new.html.haml
+++ b/app/views/charts/new.html.haml
@@ -27,7 +27,7 @@
       = f.text_field :title, placeholder: "eg. Weekly Active Users"
 
       = f.label :data_url, "Pull Data From"
-      = f.text_field :data_url, placeholder: "URL to a Keen.io Saved Query, or JSON"
+      = f.text_field :data_url, placeholder: "URL to a Keen.io lookup, or JSON"
 
       = f.label :calendar_url, "Pull Markers From"
       = f.text_field :calendar_url, placeholder: "URL to iCal Export from a Google Calendar, or JSON"
