Adding keen and gcal logos to the homepage

--- a/app/views/charts/landing.html.haml
+++ b/app/views/charts/landing.html.haml
@@ -18,6 +18,16 @@
         = link_to "Build a Chart", new_chart_url, class: "button"
         = link_to "Get the Code", github_url, class: 'button secondary'
 
+        %br 
+
+        %small 
+          Data from 
+          = image_tag 'keen-small.png'
+          Keen.io.
+          Events from 
+          = image_tag 'gcal-small.png'
+          Google Calendar
+
     .row
       .small-12.columns
         %h3 As simple as... 
